# my_piano_project

./: Dockerfile  Dockerfile.testconnection  Jenkinsfile  README.md  __init__.py  button.py  ca.crt  configmap.yaml  cookie  createuser.py  daemon.conf  deleteuser.py  entrypoint.sh  github-credentials-secret.yaml  gui_font_pygame.py  jenkins-values.yaml  login.py  logs.txt  main.py  metallb-config.yaml  mongo-pv-current.yaml  mongo-pv.yaml  mongo-pvc.yaml  mongodb-credentials-current.yaml  mongodb-credentials.yaml  mongodb-deployment.yaml  mongodb-pv.yaml  mongodb-service.yaml  mongodb-tls.crt  mongodb-tls.key  mongodb.crt  piano-deployment.yaml  piano-service.yaml  piano-vnc-service.yaml  pulseaudio-default.pa  pulseaudio.default.pa  pygame_patch.diff  pyproject.toml  requirements.txt  start.sh  (+4 more)
.pytest_cache/v/cache/: lastfailed  nodeids
mongoDB/: Dockerfile
my_flask_piano/: requirements.txt
my_flask_piano/flask_app/: app.py  game.py
my_flask_piano/flask_app/static/: game.py
my_flask_piano/venv_project1/: pyvenv.cfg
new_venv/: pyvenv.cfg
piano_helm_chart/: Chart.yaml  piano-deployment.yaml  values.yaml
piano_helm_chart/templates/: metallb-config.yaml  mongodb-credentials.yaml  mongodb-deployment.yaml  mongodb-pv.yaml  mongodb-pvc.yaml  mongodb-service.yaml  piano-deployment.yaml  piano-vnc-service.yaml
test/Archive/: Dockerfile
test_venv/: pyvenv.cfg
tests/: test_register.py
